--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,9 +25,7 @@ jobs:
           cache: 'npm'
 
       - name: Install Rust
-        uses: dtolnay/rust-action@stable
-        with:
-          components: clippy, rustfmt
+        uses: dtolnay/rust-toolchain@stable
 
       - name: Install dependencies
         run: npm ci
