--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -18,7 +18,7 @@ tauri-build = { version = "2.5.3", features = [] }
 [dependencies]
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
-tokio = { version = "1.41", features = ["full"] }
+tokio = { version = "1.41", features = ["macros", "rt-multi-thread", "sync", "time", "process", "io-util"] }
 futures-util = { version = "0.3", features = ["sink"] }
 log = "0.4"
 tauri = { version = "2.9.5", features = [] }
